--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" 
       rel="stylesheet"
     >
+    <link rel="stylesheet" href="../src/css/index.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
